--- a/case_study_main/case-study/src/app/component/home-furama/home-furama.component.html
+++ b/case_study_main/case-study/src/app/component/home-furama/home-furama.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+<app-navigation></app-navigation>
 <!--    Main Content-->
 <div class="row">
   <div class="col-lg-2">
@@ -6,3 +8,4 @@
     <img src="http://datphongresort.com/wp-content/uploads/2020/10/khu-nghi-duong-furama.jpg" style="width: 100%"/>
   </div>
 </div>
+<app-footer></app-footer>
