--- a/case_study_main/case-study/src/app/component/navigation/navigation.component.html
+++ b/case_study_main/case-study/src/app/component/navigation/navigation.component.html
@@ -19,8 +19,8 @@
           </button>
         </div>
         <div class="btn-group" style="margin-left: 30px">
-          <button type="button" class="btn btn-info">
-            <a>Khách Hàng</a>
+          <button type="button" class="btn btn-info" [routerLink]="['/listCustomer']">
+            Khách hàng
           </button>
         </div>
         <div class="btn-group" style="margin-left: 30px">
