--- a/case_study_main/case-study/src/app/component/facility/facility.component.html
+++ b/case_study_main/case-study/src/app/component/facility/facility.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-navigation></app-navigation>
+<button [routerLink]="['/createFacility']">Thêm mới</button>
 <!--    Main Content List-->
 <!--Danh Sách Dịch Vụ-->
 <div class="col-lg-12" style="width: 100%">
