--- a/case_study_main/case-study/src/app/component/customer/list-customer/list-customer.component.html
+++ b/case_study_main/case-study/src/app/component/customer/list-customer/list-customer.component.html
@@ -32,8 +32,8 @@
       <td>heh@gmail.com</td>
       <td>
         <a class="nav-link">
-          <button class=" btn btn-primary"><img src="https://img.icons8.com/3d-fluency/94/null/edit.png"
-                                                style="width: 30px"/></button>
+          <button [routerLink]="['/updateCustomer']" class=" btn btn-primary"><img src="https://img.icons8.com/3d-fluency/94/null/edit.png"
+                                                style="width: 30px"/> </button>
         </a>
       </td>
       <td>
