--- a/case_study_main/case-study/src/app/component/facility/facility.component.html
+++ b/case_study_main/case-study/src/app/component/facility/facility.component.html
@@ -1,67 +1,35 @@
 <app-header></app-header>
 <app-navigation></app-navigation>
-<button [routerLink]="['/createFacility']">Thêm mới</button>
+<button [routerLink]="['/createFacility']" class="btn btn-outline-success">Thêm mới</button>
 <!--    Main Content List-->
 <!--Danh Sách Dịch Vụ-->
-<div class="col-lg-12" style="width: 100%">
-  <img src="https://static.vivotek.vn/uploads/cong-trinh/furama-resort-da-nang/furama-resort-da-nang_1.jpg"
-       style="display: flex; margin: 0 auto; width: 50%">
+<div class="row m-0" *ngFor="let facility of facilityList">
+  <div class="col-md-1"></div>
+  <div class="col-md-10">
+    <div class="row">
+      <div class="card col-md-4">
+        <img data-bs-toggle="modal"
+             data-bs-target="#exampleModalInfo"
+             src="{{facility.img}}"
+             class="btn card-img-top" alt="..." style="height: 100%">
+        <div class="card-body">
+          <h5 class="card-title"></h5>
+          <p class="card-text">Diện tích:{{facility.area}} m2</p>
+          <p class="card-text"><small class="text-muted">Update For</small></p>
+        </div>
+        <div class="row d-flex justify-content-center">
 
-  <div class="card-group" style="justify-content: center">
-    <div class="card" style="margin: 10px">
-      <img
-        src="https://cf.bstatic.com/xdata/images/hotel/max1280x900/314234927.jpg?k=21291418450e2c1802e02864677b7cf811321797b1d36aaa55e1019133f82698&o=&hp=1"
-        class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">House</h5>
-        <p class="card-text">Diện tích: 500m2</p>
-      </div>
-    </div>
-    <div class="card" style="margin: 10px">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnkybTLUpcmqYti7Vk5Hs2F5gXb6J8hKC6Ig&usqp=CAU"
-           class="card-img-top"
-           alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Room</h5>
-        <p class="card-text">Diện tích: 100m2</p>
-      </div>
-    </div>
-    <div class="card" style="margin: 10px">
-      <img src="https://pqr.vn/wp-content/uploads/2020/06/villas-la-gi2.jpg"
-           class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Villa</h5>
-        <p class="card-text">Diện tích: 200m2</p>
+          <a class="btn btn-outline-success w-25 m-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Delete
+          </a>
+<!--          <a class="btn btn-outline-success w-25 m-2">-->
+<!--            Edit-->
+<!--          </a>-->
+          <button class="btn btn-outline-success w-25 m-2" routerLink="/updateFacility">Chỉnh sửa</button>
+        </div>
       </div>
     </div>
   </div>
-
-  <div class="card-group">
-    <div class="card" style="margin: 10px">
-      <img src="https://images.adsttc.com/media/images/5ecd/d4ac/b357/65c6/7300/009d/large_jpg/02C.jpg?1590547607"
-           class="c   ard-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">House</h5>
-        <p class="card-text">Diện tích: 300m2</p>
-      </div>
-    </div>
-    <div class="card" style="margin: 10px">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRdfuORfM7DW7Q0JvoIb-8JJ70_VxcxoiNQMg&usqp=CAU"
-           class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Room</h5>
-        <p class="card-text">Diện tích: 100m2</p>
-      </div>
-    </div>
-    <div class="card" style="margin: 10px">
-      <img
-        src="https://q-xx.bstatic.com/xdata/images/hotel/max1024x768/314234927.jpg?k=e8d0ff333645000b3345bf3c924ebdba3547cd73c362881b16049f5fe5d19701&o="
-        class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Villa</h5>
-        <p class="card-text">Diện tích: 200m2</p>
-      </div>
-    </div>
-  </div>
+  <!--  <div class="col-md-1"></div>-->
 </div>
 <app-footer></app-footer>
