--- a/case_study_main/case-study/src/app/component/facility/facility.component.html
+++ b/case_study_main/case-study/src/app/component/facility/facility.component.html
@@ -15,6 +15,7 @@
         <div class="card-body">
           <h5 class="card-title"></h5>
           <p class="card-text">Diện tích:{{facility.area}} m2</p>
+          <p class="card-text">Loại dịch vụ:{{facility.facilityType.name}} m2</p>
           <p class="card-text"><small class="text-muted">Update For</small></p>
         </div>
         <div class="row d-flex justify-content-center">
@@ -22,9 +23,9 @@
           <a class="btn btn-outline-success w-25 m-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Delete
           </a>
-<!--          <a class="btn btn-outline-success w-25 m-2">-->
-<!--            Edit-->
-<!--          </a>-->
+          <!--          <a class="btn btn-outline-success w-25 m-2">-->
+          <!--            Edit-->
+          <!--          </a>-->
           <button class="btn btn-outline-success w-25 m-2" routerLink="/updateFacility">Chỉnh sửa</button>
         </div>
       </div>
