--- a/ss8_connect_back_end/exercise/product/src/app/app.component.html
+++ b/ss8_connect_back_end/exercise/product/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--<a routerLink="/timelines">Ứng dụng tính thời gian sống</a>-->
 <!--<app-timelines></app-timelines>-->
-
+<app-nav-bar></app-nav-bar>
 <a routerLink="/product/list">Danh sách sản phẩm</a>|<a routerLink="/product/create">Tạo mới sản phẩm</a>
 <router-outlet></router-outlet>
