--- a/case_study_main/case-study/src/app/component/customer/list-customer/list-customer.component.html
+++ b/case_study_main/case-study/src/app/component/customer/list-customer/list-customer.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 <app-navigation></app-navigation>
+<button [routerLink]="['/createCustomer']" class="btn btn-outline-success">Thêm mới</button>
+
 <button><img style="width: 50%" src="https://img.icons8.com/wired/64/null/plus-2-math.png"/></button>
 <!--    Main Content-->
 <div class="col-lg-12">
@@ -25,25 +27,23 @@
       <td>{{customer.name}}</td>
       <td>{{customer.customerType.name}}</td>
       <td>{{customer.dateOfBirth}}</td>
-      <td *ngIf="customer.gender==true else case2">Nam</td>
-      <ng-template #case2>Nữ</ng-template>
+      <td>{{customer.gender == "1" ? "Nam" : "Nữ"}}
+      </td>
+      <!--      <ng-template #case2>Nữ</ng-template>-->
       <td>{{customer.idCard}}</td>
       <td>{{customer.phoneNumber}}</td>
       <td>{{customer.address}}</td>
       <td>{{customer.email}}</td>
       <td>
         <a class="nav-link">
-          <button [routerLink]="['/updateCustomer']" class=" btn btn-primary"><img
+          <button [routerLink]="['/updateCustomer',customer.id]" class=" btn btn-primary"><img
             src="https://img.icons8.com/3d-fluency/94/null/edit.png"
             style="width: 30px"/></button>
         </a>
       </td>
       <td>
-        <button
-          type="button"
-          class="btn btn-danger"
-          data-bs-toggle="modal"
-          data-bs-target="#deleteModal">
+        <button type="button" class="btn btn-danger" data-bs-toggle="modal" (click)="temp = customer"
+                data-bs-target="#exampleModal">
           <img
             src="https://img.icons8.com/external-wanicon-lineal-color-wanicon/64/null/external-delete-user-interface-wanicon-lineal-color-wanicon.png"
             style="width: 30px"/>
@@ -54,3 +54,23 @@
   </table>
 </div>
 <app-footer></app-footer>
+
+
+<!-- Modal xoá-->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Bạn chắc chắn muốn xoá</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <span>Bạn muốn xoá sản phẩm </span><span style="color: red">{{temp.name}}</span><span>này không?</span>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" >Close</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="delete(temp.id)">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
