--- a/case_study_main/case-study/src/app/component/navigation/navigation.component.html
+++ b/case_study_main/case-study/src/app/component/navigation/navigation.component.html
@@ -29,8 +29,8 @@
           </button>
         </div>
         <div class="btn-group" style="margin-left: 30px">
-          <button type="button" class="btn btn-info">
-            <a>Hợp Đồng</a>
+          <button type="button" class="btn btn-info" [routerLink]="['/listContract']">
+            Contract
           </button>
         </div>
       </div>
