--- a/case_study_main/case-study/src/app/component/facility/facility.component.html
+++ b/case_study_main/case-study/src/app/component/facility/facility.component.html
@@ -3,11 +3,12 @@
 <button [routerLink]="['/createFacility']" class="btn btn-outline-success">Thêm mới</button>
 <!--    Main Content List-->
 <!--Danh Sách Dịch Vụ-->
-<div class="row m-0" *ngFor="let facility of facilityList">
+
+<div class="row m-0" >
   <div class="col-md-1"></div>
-  <div class="col-md-10">
+  <div class="col-md-10" >
     <div class="row">
-      <div class="card col-md-4">
+      <div class="card col-md-4" *ngFor="let facility of facilityList">
         <img data-bs-toggle="modal"
              data-bs-target="#exampleModalInfo"
              src="{{facility.img}}"
