--- a/case_study_main/case-study/src/app/component/customer/create-customer/create-customer.component.css
+++ b/case_study_main/case-study/src/app/component/customer/create-customer/create-customer.component.css
@@ -110,9 +110,9 @@ button {
   font-weight: 400;
   color: #fff;
 }
-/*button:hover {*/
-/*  background: #3e4f24;*/
-/*}*/
+button:hover {
+  background: #3e4f24;
+}
 @media (min-width: 568px) {
   form {
     width: 60%;
