--- a/case_study_main/case-study/src/app/component/customer/update-customer/update-customer.component.html
+++ b/case_study_main/case-study/src/app/component/customer/update-customer/update-customer.component.html
@@ -16,7 +16,7 @@
       <select class="form-select" formControlName="customerType" [compareWith]="compareWith">
         <option [ngValue]="cusType" *ngFor="let cusType of customerTypeList">{{cusType.name}}</option>
       </select>
-      <input type="text" placeholder="Ngày sinh" style="margin-top: 10px" formControlName="dateOfBirth">
+      <input type="date" placeholder="Ngày sinh" style="margin-top: 10px" formControlName="dateOfBirth">
       <p *ngIf="customerForm.controls.dateOfBirth.hasError('required')&&customerForm.controls.dateOfBirth.touched">
         Không được để trống</p>
       <input type="text" placeholder="Căn cước" formControlName="idCard">
