--- a/case_study_main/case-study/src/app/component/facility/update/update.component.html
+++ b/case_study_main/case-study/src/app/component/facility/update/update.component.html
@@ -1,28 +1,29 @@
 <app-header></app-header>
 <app-navigation></app-navigation>
 <div style="margin-bottom: 30px">
-  <form action="/" class="decor" id="from" >
+  <form class="decor" id="from" [formGroup]="facilityForm" (ngSubmit)="update()">
     <div class="form-left-decoration"></div>
     <div class="form-right-decoration"></div>
     <div class="circle"></div>
     <div class="form-inner">
       <h1>Form chỉnh sửa dịch vụ</h1>
-      <select id="facilityType" class="form-select">
-        <option selected value="0">Villa</option>
-        <option value="1">House</option>
-        <option value="2">Room</option>
+      <select class="form-select" formControlName="facilityType">
+        <option *ngFor="let facType of facilityTypeList">{{facType.name}}</option>
       </select>
-      <input type="text" placeholder="Tên dịch vụ">
-      <input type="text" placeholder="Kiểu thuê">
-      <input type="text" placeholder="Diện tích">
-      <input type="text" placeholder="Giá">
-      <input type="text" placeholder="Số người tối đa">
-      <input type="text" placeholder="Loại phòng">
-      <input type="text" placeholder="Mô tả tiện nghi khác">
-      <input type="text" placeholder="Diện tích hồ bơi">
-      <input type="text" placeholder="Số tầng">
-      <input type="text" placeholder="Dịch vụ miễn phí đi kèm">
-      <button type="button" >Submit</button>
+      <select style="margin-top: 10px" class="form-select" formControlName="rentType">
+        <option *ngFor="let rentType of rentTypeList">{{rentType.name}}</option>
+      </select>
+      <input type="text" placeholder="Tên dịch vụ" formControlName="name" style="margin-top: 10px">
+      <input type="text" placeholder="Diện tích" formControlName="area">
+      <input type="text" placeholder="Giá" formControlName="cost">
+      <input type="text" placeholder="Số người tối đa" formControlName="maxPeople">
+      <input type="text" placeholder="Loại phòng" formControlName="standardRoom">
+      <input type="text" placeholder="Mô tả tiện nghi khác" formControlName="descriptionOtherConvenience">
+      <input type="text" placeholder="Diện tích hồ bơi" formControlName="poolArea">
+      <input type="text" placeholder="Ảnh" formControlName="img">
+      <input type="text" placeholder="Số tầng" formControlName="numberOfFloor">
+      <input type="text" placeholder="Dịch vụ miễn phí đi kèm" formControlName="facilityFree">
+      <button type="button">Submit</button>
     </div>
   </form>
 </div>
