--- a/exam/test-module5/src/app/component/list/list.component.html
+++ b/exam/test-module5/src/app/component/list/list.component.html
@@ -55,6 +55,12 @@
 </div>
 
 
+Phân trang
+<div class="pagination">
+  <a class="page-link" >Back</a>
+  <a class="page-link" (click)="nextPage()">Next</a>
+</div>
+
 <app-footer></app-footer>
 
 <!-- Modal xoá-->
